--- a/Chatbot-UI/index.html
+++ b/Chatbot-UI/index.html
@@ -38,15 +38,16 @@
 <body>
 
     <section>
-        <h1>Covid ChatBot</h1>
+        <h1><img src="https://hanoicomputercdn.com/media/lib/09-08-2023/logo-hacom-since-2001.png" /></h1>
+        <h1>HAcom ChatBot</h1>
         <p>Click on the chat button to start chatting</p>
     </section>
 
     <div id="chat-container"></div>
     <script src="./chatbot-ui.js"></script>
     <script>
-        createChatBot(host = 'http://localhost:5005/webhooks/rest/webhook', botLogo = "./imgs/bot-logo.png",
-            title = "Covid BOT", welcomeMessage = "Hey, i am Covid Bot", inactiveMsg = "Server is down, Please contact the developer to activate it", theme = "purple")
+        createChatBot(host = 'http://localhost:5005/webhooks/rest/webhook', botLogo = "https://hanoicomputercdn.com/media/lib/09-08-2023/logo-hacom-since-2001.png",
+            title = "BOT TEST HA.COM", welcomeMessage = "Xin chào, tôi là trợ lý mới của Hacom, tôi có thể giúp gì cho bạn", inactiveMsg = "Server đang lỗi ...", theme = "purple")
     </script>
 
 
@@ -54,3 +55,4 @@
 </body>
 
 </html>
+
