--- a/Chatbot-UI/index.html
+++ b/Chatbot-UI/index.html
@@ -46,7 +46,7 @@
     <div id="chat-container"></div>
     <script src="./chatbot-ui.js"></script>
     <script>
-        createChatBot(host = 'http://localhost:5005/webhooks/rest/webhook', botLogo = "https://hanoicomputercdn.com/media/lib/09-08-2023/logo-hacom-since-2001.png",
+        createChatBot(host = 'http://103.178.235.90:5005/webhooks/rest/webhook', botLogo = "https://hanoicomputercdn.com/media/lib/09-08-2023/logo-hacom-since-2001.png",
             title = "BOT TEST HA.COM", welcomeMessage = "Xin chào, tôi là trợ lý mới của Hacom, tôi có thể giúp gì cho bạn", inactiveMsg = "Server đang lỗi ...", theme = "purple")
     </script>
 
